@startuml

title __USER's Class Diagram__\n

  namespace learningapp {
    namespace dtos {
      namespace user {
        class learningapp.dtos.user.BaseUserDto {
            - id : UUID
            - jwtToken : String
            - notificationsEnabled : boolean
            + BaseUserDto()
            + BaseUserDto()
            + getId()
            + getJwtToken()
            + getUserRole()
            + isNotificationsEnabled()
            + setId()
            + setJwtToken()
            + setNotificationsEnabled()
            + setUserRole()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace dtos {
      namespace user {
        class learningapp.dtos.user.UserDto {
            - email : String
            - oldPassword : String
            - password : String
            - username : String
            + UserDto()
            {static} + builder()
            + getEmail()
            + getOldPassword()
            + getPassword()
            + getUsername()
            + setEmail()
            + setOldPassword()
            + setPassword()
            + setUsername()
        }
      }
    }
  }
  

  namespace learningapp {
    namespace dtos {
      namespace user {
        class learningapp.dtos.user.UserDto.UserDtoBuilder {
            - email : String
            - id : UUID
            - jwtToken : String
            - notificationsEnabled : boolean
            - oldPassword : String
            - password : String
            - username : String
            + build()
            + email()
            + id()
            + jwtToken()
            + notificationsEnabled()
            + oldPassword()
            + password()
            + toString()
            + userRole()
            + username()
            ~ UserDtoBuilder()
        }
      }
    }
  }
  

  learningapp.dtos.user.BaseUserDto o-- learningapp.entities.UserRole : userRole
  learningapp.dtos.user.UserDto -up-|> learningapp.dtos.user.BaseUserDto
  learningapp.dtos.user.UserDto +-down- learningapp.dtos.user.UserDto.UserDtoBuilder
  learningapp.dtos.user.UserDto.UserDtoBuilder o-- learningapp.entities.UserRole : userRole


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
